--- a/src/skins/BreadCrumbBoxSkin.mxml
+++ b/src/skins/BreadCrumbBoxSkin.mxml
@@ -28,6 +28,9 @@
 				<s:GradientEntry color="#3fa9f5"/>
 			</s:LinearGradient>
 		</s:fill>
+		<s:stroke>
+			<s:SolidColorStroke/>
+		</s:stroke>
 	</s:Rect>
 	
 	<s:Group id="contentGroup" verticalCenter="0" left="20"/>
