--- a/src/views/HomeView.mxml
+++ b/src/views/HomeView.mxml
@@ -13,6 +13,8 @@
 	
 	<fx:Script>
 		<![CDATA[
+			import views.upload.BatchUploadView;
+			import views.login.LoginView;
 			import VOs.DataObject;
 			
 			import statics.ViewTypes;
