--- a/src/components/MenuPopUp.mxml
+++ b/src/components/MenuPopUp.mxml
@@ -56,7 +56,7 @@
 		<s:Button x="5" y="74" id="browseSets" label="browseSets" click="onClick(event)" skinClass="components.MenuSetsButtonSkin"/>
 		<s:Button x="5" y="143" id="stream" label="stream" click="onClick(event)" skinClass="components.MenuStreamButtonSkin"/>
 		<s:Button x="5" y="212" id="search" label="search" click="onClick(event)" skinClass="components.MenuSearchButtonSkin"/>
-		<s:Button x="159" y="281" label="Close" click="this.close()" skinClass="components.CloseButton"/>
+		<s:Button x="159" y="281" label="Close" click="this.close()"/>
 	</s:SkinnableContainer>
 	
 </s:SkinnablePopUpContainer>
