--- a/src/skins/SpeechBubbleSkin.mxml
+++ b/src/skins/SpeechBubbleSkin.mxml
@@ -21,6 +21,7 @@
 			
 			[Bindable]
 			private var _middlePoint:Number;
+			private var forCompiler:SpeechBubbleSkin;
 			
 			private function setMiddlePoint():void{
 				_middlePoint = this.width/2.0;
@@ -36,20 +37,23 @@
 	L 0 0 ">
 	<s:fill>
 	<s:LinearGradient rotation="90">
-	<s:GradientEntry color="0x999999"/>
-	<s:GradientEntry color="0x999999"/>
+	<s:GradientEntry color="#333333"/>
+	<s:GradientEntry color="#333333"/>
 	</s:LinearGradient>
 	</s:fill>
 	
 	</s:Path>
 	
-	<s:Rect x="0" y="45" width="100%" height="100">
+	<s:Rect y="45" width="95%" height="300" radiusX="10" radiusY="10" horizontalCenter="0">
 		<s:fill>
-			<s:SolidColor color="0x999999"/>
+			<s:LinearGradient>
+				<s:GradientEntry color="#333333"/>
+				<s:GradientEntry color="#333333"/>
+			</s:LinearGradient>
 		</s:fill>
 	</s:Rect>
 	
-	<s:Group id="contentGroup" top="74" left="24" right="24" bottom="10"/>
+	<s:Group id="contentGroup" top="90" left="34" right="34 " bottom="10" fontSize="16" color="#ffffff"/>
 	
 	<!-- SkinParts
 	name=contentGroup, type=spark.components.Group, required=false
