EditView functioning with layout 95% finished.tags, visibility(privacy),title,description.tags can be added by typing and deleted by clicking a tag. tag ir created. SinglePhotoView - still bugs in display of data changed in edit view.
Fixed a bug in the as3Flickrlib xml parse for photo: can now read
visibility settings from xml into photo object.

--- a/src/ItemRenderers/PhotoListItemRenderer.mxml
+++ b/src/ItemRenderers/PhotoListItemRenderer.mxml
@@ -4,7 +4,7 @@
 				xmlns:mx="library://ns.adobe.com/flex/mx"
 				xmlns:styles="styles.*"
 				autoDrawBackground="false" contentBackgroundAlpha="0" 
-				>
+				creationComplete="init()">
 	<fx:Declarations>
 		<styles:GraphicsLib id="graphicLib"/>
 	</fx:Declarations>
@@ -18,13 +18,18 @@
 			
 			private var _data:PhotoVO;
 			
+			private function init():void{
+				//trace("plir init()");
+			}
+			
 			override public function set data(value:Object):void{
 				_data = (value as PhotoVO);
+				//trace("plir: "+_data.title);
 				photo.source = value.image;
 			}
 			
 			private function onClickImage():void{
-				EventCentral.getInstance().dispatchEvent(new CustomDataEvent(CustomDataEvent.IMAGE_IN_LIST_CLICKED,null,null,null,null,_data));
+				//EventCentral.getInstance().dispatchEvent(new CustomDataEvent(CustomDataEvent.IMAGE_IN_LIST_CLICKED,null,null,null,null,_data));
 			}
 			
 		]]>
