--- a/src/skins/BlackBox.mxml
+++ b/src/skins/BlackBox.mxml
@@ -7,7 +7,7 @@
 	</fx:Metadata>
 	<fx:Script>
 		<![CDATA[
-			public var forCompiler:BlueBox;
+			public var forCompiler:BlackBox;
 		]]>
 	</fx:Script>
 	
@@ -21,19 +21,17 @@
 		<s:State name="normal" />
 	</s:states>
 	
-	<s:Rect width="105%" height="100%" filters="{[graphicsLib.getDropShadowFilter()]}">
+	<s:Rect width="100%" height="100%" 
+		radiusX="10" radiusY="10">
 		<s:fill>
 			<s:LinearGradient rotation="90">
-				<s:GradientEntry color="#8ccbf9"/>
-				<s:GradientEntry color="#3fa9f5"/>
+				<s:GradientEntry color="#333333"/>
+				<s:GradientEntry color="#444444"/>
 			</s:LinearGradient>
 		</s:fill>
-		<s:stroke>
-			<s:SolidColorStroke/>
-		</s:stroke>
 	</s:Rect>
 	
-	<s:Group id="contentGroup" verticalCenter="2" left="20"/>
+	<s:Group id="contentGroup" left="10" right="10" top="10" bottom="10"/>
 	
 	<!-- SkinParts
 	name=contentGroup, type=spark.components.Group, required=false
