--- a/src/skins/ButtonBarBoxSkin.mxml
+++ b/src/skins/ButtonBarBoxSkin.mxml
@@ -24,8 +24,8 @@
 	<s:Rect width="105%" height="100%" filters="{[graphicsLib.getDropShadowFilter()]}">
 		<s:fill>
 			<s:LinearGradient rotation="90">
-				<s:GradientEntry color="#8ccbf9"/>
-				<s:GradientEntry color="#3fa9f5"/>
+				<s:GradientEntry color="#666666"/><!--#8ccbf9-->
+				<s:GradientEntry color="#666666"/><!--#3fa9f5-->
 			</s:LinearGradient>
 		</s:fill>
 		<s:stroke>
@@ -33,7 +33,7 @@
 		</s:stroke>
 	</s:Rect>
 	
-	<s:Group id="contentGroup" verticalCenter="2" left="20"/>
+	<s:Group id="contentGroup" verticalCenter="0" horizontalCenter="0"/>
 	
 	<!-- SkinParts
 	name=contentGroup, type=spark.components.Group, required=false
