--- a/src/skins/TagIRSkin.mxml
+++ b/src/skins/TagIRSkin.mxml
@@ -12,16 +12,16 @@
 		<s:State name="normal" />
 	</s:states>
 	
-	<s:Rect top="0" bottom="0" right="0" left="0">
+	<s:Rect width="100%" height="100%">
 		<s:fill>
 			<s:LinearGradient rotation="90">
-				<s:GradientEntry color="0xffffff"/>
-				<s:GradientEntry color="0xeeeeee"/>
+				<s:GradientEntry color="0xaaaaaa"/>
+				<s:GradientEntry color="0x999999"/>
 			</s:LinearGradient>
 		</s:fill>
 	</s:Rect>
 	
-	<s:Group id="contentGroup" left="10" right="10" top="10" bottom="10"/>
+	<s:Group id="contentGroup" left="10" right="10" top="10" bottom="10" color="#333333"/>
 	
 	<!-- SkinParts
 	name=contentGroup, type=spark.components.Group, required=false
