--- a/src/styles/GraphicsLib.mxml
+++ b/src/styles/GraphicsLib.mxml
@@ -12,6 +12,12 @@
 				var dropShadowFilter:spark.filters.DropShadowFilter = new spark.filters.DropShadowFilter(4,45,color,0.5,2,2);
 				return dropShadowFilter;
 			}
+			
+			public function getDropShadowFilterWhite():spark.filters.DropShadowFilter{
+				var color:uint = 0xdddddd;
+				var dropShadowFilter:spark.filters.DropShadowFilter = new spark.filters.DropShadowFilter(1,90,color,1,1,1);
+				return dropShadowFilter;
+			}
 		]]>
 	</fx:Script>
 	
